--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "aos": "^3.0.0-beta.6",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "vue-scrollactive": "^0.8.0"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.0.0",
