--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "aos": "^3.0.0-beta.6",
+    "countup.js": "^2.0.4",
     "nuxt": "^2.0.0",
+    "vue-countup-v2": "^4.0.0",
     "vue-scrollactive": "^0.8.0"
   },
   "devDependencies": {
